--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </style>
 
 </head>
-<body>
+<body style="overflow: hidden;">
 <div class="mx-2">
     <div class="row">
         <div class="col-md-4">
