changed link color

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
         .pointer {
             cursor: pointer;
-            color: blue;
+            color: #00c2ff;
         }
 
         #fileInput{
