added more dicom support

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>DICOM Tag Browser</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="/css/bootstrap-icons.min.css">
     <style>
 
         #dropZone {
@@ -53,7 +53,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <div id="dropZone">
-                        <div style="margin-top:225px;"><h3>Drag DICOM file here</h3></div>
+                        <div style="margin-top:225px;margin-left: 10%;"><h3><i class="bi bi-download"></i>   Drag DICOM file here</h3></div>
                     </div>
                 </div>
             </div>
