--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
             display: none;
         }
 
+        .table thead th {
+            position: sticky;
+            top: 0;
+        }
+
         td:hover i{
             display: inline;
         }
@@ -43,6 +48,14 @@
         td[show="copied"] i:hover{
             cursor: pointer;
             color: #00c2ff;
+        }
+
+        .viewport{
+            width:100%;
+            height:65%;
+            margin-left:2%;
+            margin-top:6%;
+            color: white;display:inline-block;
         }
 
 
@@ -57,11 +70,11 @@
                 <h3>DICOM Inspector</h3>
             </div>
             <div class="mx-5" style="margin-top: 5%;">
-                <select id="seriesSelect" onchange="setNewSeries(this.value)" class="form-select">
+                <select id="seriesSelect" onchange="setNewSeries(this.value)" style="display: none;" class="form-select">
 
                 </select>
             </div>
-            <div style="width:100%;height:65%; margin-left:2%; margin-top:6%;color: white;display:inline-block;" class='disable-selection noIbar' unselectable='on' onselectstart='return false;' onmousedown='return false;'>
+            <div class='viewport disable-selection noIbar' unselectable='on' onselectstart='return false;' onmousedown='return false;'>
                 <div id="dicomInfo"></div>
                 <div id="dicomImage" style="width:100%;height:80%"></div>
             </div>
@@ -76,7 +89,7 @@
         </div>
         <div class="col-md-8">
             <div class="row mt-5">
-                <input type="text" id="fileInput" class="form-control" onkeydown="performSearch(this.value)" placeholder="Search Tags..." />
+                <input type="text" id="fileInput" class="form-control" oninput="performSearch(this.value)" placeholder="Search Tags..." />
             </div>
     
             <div class="row">
