fixed search state

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         </div>
         <div class="col-md-8">
             <div class="row mt-5">
-                <input type="text" id="fileInput" class="form-control" oninput="performSearch(this.value)" placeholder="Search Tags..." />
+                <input type="text" id="searchInput" class="form-control" oninput="performSearch(this.value)" placeholder="Search Tags..." />
             </div>
     
             <div class="row">
