--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@
 <script src="/js/cornerstoneMath.min.js"></script>
 <script src="/js/cornerstoneTools.js"></script>
 <script src="/js/cornerstoneWADOImageLoader.bundle.min.js"></script>
+<script src="/js/uids.js"></script>
 <script src="/js/app.js"></script>
 <script src="/js/initializeWebWorkers.js"></script>
 
