--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
             height: 1px;
         }
 
+        #searchInput{
+            width: 96%;
+        }
+
         .pointer {
             cursor: pointer;
             color: #00c2ff;
@@ -74,7 +78,7 @@
 
                 </select>
             </div>
-            <div class='viewport disable-selection noIbar' unselectable='on' onselectstart='return false;' onmousedown='return false;'>
+            <div class='viewport disable-selection noIbar' unselectable='on'>
                 <div id="dicomInfo"></div>
                 <div id="dicomImage" style="width:100%;height:80%"></div>
             </div>
