--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             </div>
     
             <div class="row">
-                <div class="col-md-12">
+                <div class="col-md-12 mt-2">
                     <div id="dropZone">
                         <div style="margin-top:225px;margin-left: 10%;  user-select: none;"><h3><i class="bi bi-download"></i>   Drag DICOM file here</h3></div>
                     </div>
