--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <title>DICOM Tag Browser</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/bootstrap-icons.min.css">
-    <link href="/css/select2.min.css" rel="stylesheet" />
+    <link href="css/select2.min.css" rel="stylesheet" />
     <style>
 
         #dropZone {
@@ -153,18 +153,18 @@
 </div>
 </body>
 
-<script src="/js/DicomTags.js"></script>
+<script src="js/DicomTags.js"></script>
 <script src="js/jquery-3.7.1.min.js"></script>
-<script src="/js/select2.min.js"></script>
-<script src="/js/hammer.js"></script>
-<script src="/js/bootstrap.bundle.min.js"></script>
-<script src="/js/dicomParser.min.js"></script>
-<script src="/js/cornerstone.js"></script>
-<script src="/js/cornerstoneMath.min.js"></script>
-<script src="/js/cornerstoneTools.js"></script>
-<script src="/js/cornerstoneWADOImageLoader.bundle.min.js"></script>
-<script src="/js/uids.js"></script>
-<script src="/js/app.js"></script>
-<script src="/js/initializeWebWorkers.js"></script>
+<script src="js/select2.min.js"></script>
+<script src="js/hammer.js"></script>
+<script src="js/bootstrap.bundle.min.js"></script>
+<script src="js/dicomParser.min.js"></script>
+<script src="js/cornerstone.js"></script>
+<script src="js/cornerstoneMath.min.js"></script>
+<script src="js/cornerstoneTools.js"></script>
+<script src="js/cornerstoneWADOImageLoader.bundle.min.js"></script>
+<script src="js/uids.js"></script>
+<script src="js/app.js"></script>
+<script src="js/initializeWebWorkers.js"></script>
 
 </html>
