--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         }
 
         .select2-container--default .select2-selection--single .select2-selection__rendered{
-            color: white !important;
+            color: var(--bs-heading-color) !important;
         }
 
 
@@ -78,7 +78,7 @@
 
         .select2-container--default .select2-results__option--selected{
             background-color: var(--bs-primary) !important;
-            color: white !important;
+            color: var(--bs-heading-color) !important;
         }
 
 
