--- a/index.html
+++ b/index.html
@@ -3,86 +3,10 @@
 <head>
     <title>DICOM Tag Browser</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/bootstrap-icons.min.css">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap-icons.min.css" rel="stylesheet">
     <link href="css/select2.min.css" rel="stylesheet" />
-    <style>
-
-        #dropZone {
-            height: 86vh;
-            width: 100%;
-            overflow: auto;
-        }
-
-        #dicomInfo{
-            position: absolute;
-        }
-
-        #dicomInfo p{
-            color: white;
-            font-size: 10px;
-            height: 1px;
-        }
-
-        #searchInput{
-            width: 96%;
-        }
-
-        .pointer {
-            cursor: pointer;
-            color: #00c2ff;
-        }
-
-        #fileInput{
-            width: 95%;
-        }
-
-        td i{
-            display: none;
-        }
-
-        .table thead th {
-            position: sticky;
-            top: 0;
-        }
-
-        td:hover i{
-            display: inline;
-        }
-
-        td[show="copied"] i:hover{
-            cursor: pointer;
-            color: #00c2ff;
-        }
-
-        .viewport{
-            width:100%;
-            height:65%;
-            margin-left:2%;
-            margin-top:6%;
-            color: white;display:inline-block;
-        }
-
-        .select2-container--default .select2-selection--single {
-            background-color: var(--bs-body-bg) !important;
-        }
-
-        .select2-container--default .select2-selection--single .select2-selection__rendered{
-            color: var(--bs-heading-color) !important;
-        }
-
-
-        .select2-dropdown{
-            background-color: var(--bs-body-bg) !important;
-        }
-
-        .select2-container--default .select2-results__option--selected{
-            background-color: var(--bs-primary) !important;
-            color: var(--bs-heading-color) !important;
-        }
-
-
-    </style>
+    <link href="css/app.css" rel="stylesheet" />
 
 </head>
 <body style="overflow: hidden;">
