--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
 </div>
 </body>
 
+<script src="js/jszip.min.js"></script>
 <script src="js/DicomTags.js"></script>
 <script src="js/jquery-3.7.1.min.js"></script>
 <script src="js/select2.min.js"></script>
