--- a/index.html
+++ b/index.html
@@ -7,14 +7,19 @@
     <link href="css/bootstrap-icons.min.css" rel="stylesheet">
     <link href="css/select2.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
-
+    <link rel="icon" href="images/logo.webp" type="image/webp">
+    <link rel="favicon" href="images/logo.webp" type="image/webp">
 </head>
 <body style="overflow: hidden;">
 <div class="mx-2">
     <div class="row">
         <div class="col-md-4">
             <div style="margin-top: 10%;" class="heading mx-5">
-                <h3>DICOM Inspector</h3>
+                <div style="display: flex;">
+                    <img src="images/logo.webp" alt="dicom-browser-logo" style="width: 50px; height: 50px;" />
+                    <h3 class="mt-2 mx-2">DICOM Inspector</h3>
+                </div>
+                
             </div>
             <div class="mx-5" style="margin-top: 5%;">
                 <select id="seriesSelect" onchange="setNewSeries(this.value)" style="display: none; width: 100%;" class="form-select">
