--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="row">
         <div class="col-md-4">
             <div style="margin-top: 10%;" class="heading mx-5">
-                <div style="display: flex;">
+                <div style="display: flex;" onclick="toggleDarkMode()">
                     <img src="images/logo.webp" alt="dicom-browser-logo" style="width: 50px; height: 50px;" />
                     <h3 class="mt-2 mx-2">DICOM Inspector</h3>
                 </div>
