--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="css/app.css" rel="stylesheet" />
     <link rel="icon" href="images/logo.webp" type="image/webp">
     <link rel="favicon" href="images/logo.webp" type="image/webp">
+    <link rel="manifest" href="manifest.json">
 </head>
 <body style="overflow: hidden;">
 <div class="mx-2">
