--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="row">
                 <div class="col-md-12 mt-2">
                     <div id="dropZone">
-                        <div style="margin-top:225px;margin-left: 10%;  user-select: none;"><h3><i class="bi bi-download"></i>   Drag DICOM file here</h3></div>
+                        <div style="margin-top:225px;margin-left: 10%;  user-select: none;"><h3><i class="bi bi-download"></i>   Drop DICOM files here</h3></div>
                     </div>
                 </div>
             </div>
