--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
         <div class="col-md-4">
             <div style="margin-top: 10%;" class="heading mx-5">
                 <div style="display: flex;">
-                    <img src="images/logo.webp" onclick="toggleDarkMode()" alt="dicom-browser-logo" style="width: 50px; height: 50px;" />
+                    <button onclick="toggleDarkMode()" style="border: none; background: none; padding: 0;">
+                        <img src="images/logo.webp" alt="dicom-browser-logo" style="width: 50px; height: 50px;" />
+                    </button>
                     <h3 class="mt-2 mx-2">DICOM Inspector</h3>
                 </div>
                 
