--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
                 <div id="dicomInfo"></div>
                 <div id="dicomImage" style="width:100%;height:80%"></div>
             </div>
-            <div id="slider-div" style="display: none;" class="row mx-3">
-                <div class="col-md-1 ml-5" id="currentSlice">1</div>
-                <div class="col-md-10">
+            <div style="display: none;" class="row mx-3 slider-div">
+                <div class="col-md-1"><button class="btn movieControlButton" onclick="toggleMoviePlayback();"><i id="movieControlIcon" class="bi bi-play-fill"></i></button></div>
+                <div class="col-md-1 ml-1" id="currentSlice">1</div>
+                <div class="col-md-9">
                     <input type="range" id="dicomSlice" min="1" max="1" value="1" class="form-range" onclick="stopMovie()" />
                 </div>
-                
                 <div class="col-md-1" id="totalSlice">1</div>
             </div>
         </div>
