--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
                 </select>
             </div>
-            <div class='viewport disable-selection noIbar' unselectable='on'>
+            <div class='viewport disable-selection noIbar' unselectable='on' oncontextmenu="return false">
                 <div id="dicomInfo"></div>
                 <div id="dicomImage" style="width:100%;height:80%"></div>
             </div>
