--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
 <script src="js/cornerstoneWADOImageLoader.bundle.min.js"></script>
 <script src="js/uids.js"></script>
 <script src="js/app.js"></script>
+<script src="js/app.pwa.js"></script>
 <script src="js/initializeWebWorkers.js"></script>
 
 </html>
