--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 </div>
                 
             </div>
-            <div class="mx-5" style="margin-top: 5%;">
+            <div id="seriesSelectDiv" class="mx-5" style="margin-top: 5%;">                
                 <select id="seriesSelect" onchange="setNewSeries(this.value)" style="display: none; width: 100%;" class="form-select">
 
                 </select>
@@ -40,6 +40,7 @@
                     <input type="range" id="dicomSlice" min="1" max="1" value="1" class="form-range" onclick="stopMovie()" onKeyDown="return false;" />
                 </div>
                 <div class="col-md-1" id="totalSlice">1</div>
+                <button class="btn" onclick="unloadSeries()"><i class="bi bi-folder-minus"></i> Remove Series</button>
             </div>
         </div>
         <div class="col-md-8">
