--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
                     <input type="range" id="dicomSlice" min="1" max="1" value="1" class="form-range" onclick="stopMovie()" onKeyDown="return false;" />
                 </div>
                 <div class="col-md-1" id="totalSlice">1</div>
+                
+            </div>
+            <div class="unloadSeriesDiv">
                 <button class="btn" onclick="unloadSeries()"><i class="bi bi-folder-minus"></i> Remove Series</button>
             </div>
         </div>
