fixed variable names

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <div class="col-md-1" id="totalSlice">1</div>
                 
             </div>
-            <div id="unloadSeriesDiv" class="row mx-3">
+            <div id="unloadSeriesDiv" class="row mx-3" style="display: none;">
                 <button class="btn" onclick="unloadSeries()"><i class="bi bi-folder-minus"></i> Remove Series</button>
             </div>
         </div>
